Added functionality to Invite friends button.

--- a/whiteboard/Localizable.strings
+++ b/whiteboard/Localizable.strings
@@ -34,3 +34,6 @@
 "FollowButton" = "Follow "; // space is added for centering
 "FollowingButton" = "Following";
 "InviteFriends" = "Invite friends";
+"EmailSubject" = "Join me on Whiteboard";
+"EmailBody" = "<h2>Header!</h2><p><a href=\"\">Whiteboard</a> is the easiest way to share photos with your friends. HTML goes here!</p>";
+"MessageBody" = "Check out the Whiteboard app!";
