--- a/whiteboard/Localizable.strings
+++ b/whiteboard/Localizable.strings
@@ -39,3 +39,6 @@
 "EmailSubject" = "Join me on Whiteboard";
 "EmailBody" = "<h2>Header!</h2><p><a href=\"\">Whiteboard</a> is the easiest way to share photos with your friends. HTML goes here!</p>";
 "MessageBody" = "Check out the Whiteboard app!";
+
+// Pull to refresh
+"LastUpdated" = "Last updated on";
